add functions to caclulate price changes, add proper time formatting on ticket output, finish price prototyle to calulate and output proper string

--- a/index.html
+++ b/index.html
@@ -42,20 +42,20 @@
             <div class="form-group">
               <label for="show-label">Show times:</label>
               <select class="form-control" id="show-times">
-                <option>Choose your movie...</option>
-                <option>10:00AM</option>
-                <option>11:00AM</option>
-                <option>12:00AM</option>
-                <option>1:00PM</option>
-                <option>2:00PM</option>
-                <option>3:00PM</option>
-                <option>4:00PM</option>
-                <option>5:00PM</option>
-                <option>6:00PM</option>
-                <option>7:00PM</option>
-                <option>8:00PM</option>
-                <option>9:00PM</option>
-                <option>10:00PM</option>
+                <option value=-1>Choose your movie...</option>
+                <option value=0>10:00AM</option>
+                <option value=1>11:00AM</option>
+                <option value=2>12:00AM</option>
+                <option value=3>1:00PM</option>
+                <option value=4>2:00PM</option>
+                <option value=5>3:00PM</option>
+                <option value=6>4:00PM</option>
+                <option value=7>5:00PM</option>
+                <option value=8>6:00PM</option>
+                <option value=9>7:00PM</option>
+                <option value=10>8:00PM</option>
+                <option value=11>9:00PM</option>
+                <option value=12>10:00PM</option>
               </select>
             </div>
 
